style contact info

--- a/index.html
+++ b/index.html
@@ -154,12 +154,10 @@
 
 
        <!-- "reach out" section -->
-       <section>
-           <h2>Reach Out</h2>
+       <section id="reach-out" class="contact">
+           <h2 class="section-title secondary-border">Reach Out</h2>
            <div class="contact-info">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3474.347506997807!2d-98.69022366702441!3d29.4478612820155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865c431a1b276f9f%3A0x3900466e18e0c614!2s8823%20Dugas%20Dr%2C%20San%20Antonio%2C%20TX%2078251!5e0!3m2!1sen!2sus!4v1645261892743!5m2!1sen!2sus"
-             width="400"
-             height="400"
              style="border:0;"
              allowfullscreen=""
              loading="lazy">
