add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 
         <!-- hero section -->
         <section class="hero">
+            <div class="hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt optio, vitae voluptas incidunt praesentium quis esse ipsum iste fuga sequi totam ab odio voluptatem enim aliquid? Vero ex enim praesentium?
+                </p>
+            </div>
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
