added flexbox to the steps

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     </head>
 
     <body>
+
         <!-- navigation -->
+
         <header>
             <h1>
                 <a href="/">
@@ -17,10 +19,13 @@
             </h1>
             <nav>
                 <!-- Unordered list element -->
+                
                 <ul>
                     <!-- List item element -->
+
                     <li>
                         <!-- Anchor element -->
+
                         <a href="#what-we-do">What We Do</a>
                     </li>
                     <li>
@@ -37,6 +42,7 @@
         </header>
 
         <!-- hero section -->
+
         <section class="hero">
             <div class="hero-cta">
                 <h2>Start Building Habits.</h2>
@@ -47,7 +53,9 @@
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
+
                 <!-- Add form element -->
+
                 <form>
                     <label for="name">Enter full name:</label>
                     <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
@@ -74,10 +82,12 @@
                 </form>
             </div>
         </section>
+
         <!-- end hero -->
 
 
        <!-- "what we do" section -->
+
        <section id="what-we-do" class="intro">
            <div class="flex-row">
            <h2 class="section-title primary-border">
@@ -94,6 +104,7 @@
 
 
        <!-- "what you do" section -->
+
        <section id="what-you-do" class="steps">
         <div class="flex-row">
            <h2 class="section-title secondary-border">
@@ -101,34 +112,65 @@
            </h2>
         </div>
         
-           <div>
-               <!-- insert this img element -->
-               <img src="./assets/images/step-1.svg" alt="" />
-               <h3>Step 1: <span>Fill Out The Form Above.</span></h3>
-               <p>You're already here, so why not?</p>
-           </div>
+        <!-- insert this img element -->
 
-           <div>
-               <img src="./assets/images/step-2.svg" alt="" />
-               <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
-               <p>Are you here to build muscle, lose weight, or just feel good?</p>
-           </div>
+        <div class="step">
+            <h3>Step 1.</h3>
+            <div class="step-info">
+              <div class="step-img">
+                <img src="./assets/images/step-1.svg" alt="" />
+              </div>
+              <div class="step-text">
+                <h4>Fill Out The Form Above</h4>
+                <p>You're already here, so why not?</p>
+              </div>
+            </div>
+          </div>
 
-           <div>
-               <img src="./assets/images/step-3.svg" alt="" />
-               <h3>Step 3: <span>Running.</span></h3>
-               <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
-           </div>
+          <div class="step">
+            <h3>Step 2.</h3>
+            <div class="step-info">
+              <div class="step-img">
+                <img src="./assets/images/step-2.svg" alt="" />
+              </div>
+              <div class="step-text">
+                <h4>Consult with One of Our Trainers.</h4>
+                <p>Are you here to build muscle, lose weight, or just feel good?</p>
+              </div>
+            </div>
+          </div>
 
-           <div>
-               <img src="./assets/images/step-4.svg" alt="" />
-               <h3>Step 4: <span>Results.</span></h3>
-               <p>Bi-weekly checkins with your trainer will keep you focused.</p>
-           </div>
+            <div class="step">
+            <h3>Step 3.</h3>
+            <div class="step-info">
+              <div class="step-img">
+                <img src="./assets/images/step-3.svg" alt="" />
+              </div>
+              <div class="step-text">
+                <h4>Running.</h4>
+                <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="step">
+            <h3>Step 4.</h3>
+            <div class="step-info">
+              <div class="step-img">
+                <img src="./assets/images/step-4.svg" alt="" />
+              </div>
+              <div class="step-text">
+                <h4>Results.</h4>
+                <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+              </div>
+            </div>
+          </div>
+
        </section>
 
 
        <!-- "meet the trainers" section -->
+
        <section id="your-trainers" class="trainers">
         <div class="flex-row">
            <h2 class="section-title primary-border">
@@ -147,6 +189,7 @@
             </article>
 
             <!-- second trainer bio -->
+
             <article class="trainer">
                 <div class="trainer-bio text-right">
                     <h3>Joanna Gill</h3>
@@ -159,6 +202,7 @@
             </article>
 
             <!-- third trainer bio -->
+
             <article class="trainer">
                 <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
                 <div class="trainer-bio text-left">
@@ -173,6 +217,7 @@
 
 
        <!-- "reach out" section -->
+
        <section id="reach-out" class="contact">
         <div class="flex-row">
            <h2 class="section-title secondary-border">
@@ -219,6 +264,7 @@
 
 
        <!-- footer -->
+
        <footer>
            <h2>❤️ Made with love by Run Buddy.</h2>
            <div>
