--- a/index.html
+++ b/index.html
@@ -171,17 +171,19 @@
 
        <!-- "meet the trainers" section -->
 
-       <section id="your-trainers" class="trainers">
+       <section id="your-trainers">
         <div class="flex-row">
            <h2 class="section-title primary-border">
                Meet The Trainers
             </h2>
         </div>
+
+        <div class="trainers">
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-                <div class="trainer-bio text-left">
-                    <h3>Arron Stephens</h3>
-                    <h4>Speed / Strength</h4>
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Arron Stephens</h3>
+                    <h4 class="trainer-role">Speed / Strength</h4>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit provident nostrum eveniet eligendi, ullam in, cupiditate eaque sunt at dicta iure maiores iste consequuntur, exercitationem aspernatur hic facere tempore voluptatibus?
                     </p>
@@ -191,28 +193,30 @@
             <!-- second trainer bio -->
 
             <article class="trainer">
-                <div class="trainer-bio text-right">
-                    <h3>Joanna Gill</h3>
-                    <h4>Endurance</h4>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Joanna Gill</h3>
+                    <h4 class="trainer-role">Endurance</h4>
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro veritatis illum saepe possimus! Veniam quidem, voluptas possimus facere laborum deleniti amet iste velit assumenda eum voluptatem, dolor, vel sequi sit?
                     </p>
                 </div>
-                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
             </article>
 
             <!-- third trainer bio -->
 
             <article class="trainer">
                 <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-                <div class="trainer-bio text-left">
-                    <h3>Harry "the headband" Smith</h3>
-                    <h4>Strength</h4>
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Harry "the headband" Smith</h3>
+                    <h4 class="trainer-role">Strength</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero dolores voluptatibus obcaecati vitae harum nulla porro iusto nam quia optio, ratione ut animi eaque odio adipisci. Dolores asperiores impedit sit?
                     </p>
                 </div>
             </article>
+        </div>
+        
        </section>
 
 
